Changes to Version 2.7-2

  o Added xlim, ylim, and ... args to discretePlot() (suggestion of Beatriz Lacruz Casaucau).
  
  o Duplicated quantiles in numSummary() now produce a warning and only unique quantiles are used (after report by Beatriz Lacruz Casaucau).
  
  o Fixed bug in Barplot() that produced misplaced text for counts/percents in many cases (also reported by  Beatriz Lacruz Casaucau).

Changes to Version 2.7-1

  o Added repeatedMeasuresPlot().
  
  o Added reshapeL2W() and reshapeW2L().
  
  o The stringsAsFactors argument to readSAS(), readSPSSS(), readStata(), and readXL() now defaults to FALSE.
  
  o Barplot(), discretePlot(), Dotplot(), Hist(), plotMeans() accommodate logical and character variables as grouping factor(s).

Changes to Version 2.7-0

  o Added discreteCounts() and piechart() (after suggestions of Ethan Harris).
  
  o Added counts/percents to bars in Barplot() (suggestion of Ethan Harris).
  
  o Fixed DeltaMethod() so that it doesn't ignore the level argument (reported by on de Haan).
  
  o Small improvements.

Changes to Version 2.5-1

  o Depend on R >= version 3.5.0 because of use of isFALSE() (at request of CRAN).

Changes to Version 2.5-0

  o Synchronize version numbers with minor versions of the Rcmdr package.
  
  o Show axis ticks at observed values in discretePlot() (suggestion of Beatriz Lacruz Casaucau).
  
  o binnedCounts() reports percentage as well as frequency distribution (suggestion of Beatriz Lacruz Casaucau).
  
  o indexplot() accepts groups argument.

Changes to Version 1.0-10

  o Make indexplot() compatible with car 3.0-0.

Changes to Version 1.0-9

  o Fixed bug in discretePlot() (reported by Felipe Rafael Ribeiro Melo).

Changes to Version 1.0-8

  o readSPSS() now can process value labels when haven::read_SPSS() is called; new use.value.labels argument, defaults to TRUE (after report by Manuel Munoz Marquez).

Changes to Version 1.0-7

  o No longer import print.rcorr from Hmisc.
