@@ -2,9 +2,12 @@ Changes to Version 2.7-2
 
   o Added xlim, ylim, and ... args to discretePlot() (suggestion of Beatriz Lacruz Casaucau).
   
+  o Fixed a bug in reshapeL2W() that could cause the columns produced from the varying variable(s) in the long data set to be misnamed (reported by Tamas Ferenci).
+
   o Duplicated quantiles in numSummary() now produce a warning and only unique quantiles are used (after report by Beatriz Lacruz Casaucau).
   
   o Fixed bug in Barplot() that produced misplaced text for counts/percents in many cases (also reported by  Beatriz Lacruz Casaucau).
+
 
 Changes to Version 2.7-1
 
